force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/CLQ_Corrective_Action_Plan__c.object-meta.xml
<CustomObject>
    <description>This object links Inspection and Findings</description>
    <label>Corrective Action Plan</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Corrective Action No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corrective Action Plans</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>