force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_Associated_Organization__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Associated_Organization__c</fullName>
    <formula>CLQ_Program__r.CLQ_Associated_Organization__r.Name</formula>
    <label>Associated Organization</label>
    <type>Text</type>
</CustomField>