force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_CAP_Complete__c.field-meta.xml
<CustomField>
    <fullName>CLQ_CAP_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CAP Complete</label>
    <type>Checkbox</type>
</CustomField>