force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_CAP_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_CAP_Due_Date__c</fullName>
    <description>date field to capture due date of corrective action plan</description>
    <label>CAP Due Date</label>
    <type>Date</type>
</CustomField>