force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_CAP_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_CAP_Email_Sent_Date__c</fullName>
    <label>CAP Email Sent Date</label>
    <type>Date</type>
</CustomField>