force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_CAP_Status__c.field-meta.xml
<CustomField>
    <fullName>CLQ_CAP_Status__c</fullName>
    <label>CAP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Resubmitted</fullName>
            </value>
            <value>
                <fullName>Returned for Revision</fullName>
            </value>
            <value>
                <fullName>Closed - Not Addressed</fullName>
            </value>
            <value>
                <fullName>Report Revised - Not Required</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Revised</fullName>
            </value>
            <value>
                <fullName>CAP Revised</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>