force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_Comment__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Comment__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>