force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_Compliance_Summary_Domain_Rule__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Compliance_Summary_Domain_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compliance Summary Domain Rule</label>
    <referenceTo>CLQ_Domain_Rule__c</referenceTo>
    <relationshipLabel>Corrective Action Plans</relationshipLabel>
    <relationshipName>Corrective_Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>