force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_Compliance_Summary_Rule_Formula__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Compliance_Summary_Rule_Formula__c</fullName>
    <formula>CLQ_Findings__r.CLQ_Rules_Inspected__r.CLQ_Domain_Rule__r.CLQ_Rule__r.CLQ_Rule_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compliance Summary Rule</label>
    <type>Text</type>
</CustomField>