force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_Documents_Required__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Documents_Required__c</fullName>
    <label>Documents Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>