force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_Documents_Required_Long_Text__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Documents_Required_Long_Text__c</fullName>
    <label>Documents Required</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>