force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_Findings__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Findings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Findings</label>
    <referenceTo>CLQ_Findings__c</referenceTo>
    <relationshipLabel>Corrective Action Plans</relationshipLabel>
    <relationshipName>Corrective_Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>