force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_Inspection__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection</label>
    <referenceTo>CLQ_Inspection__c</referenceTo>
    <relationshipLabel>Corrective Action Plans</relationshipLabel>
    <relationshipName>Corrective_Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>