force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspection_Date__c</fullName>
    <formula>CLQ_Inspection__r.CLQ_Last_Visit_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection Date</label>
    <type>Date</type>
</CustomField>