force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_Inspection_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspection_Owner_Email__c</fullName>
    <description>Email address of Inspection Owner for Email alerts - field not needed on layout</description>
    <label>Inspection Owner Email</label>
    <type>Email</type>
</CustomField>