force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_Non_Compliance_Finding__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Non_Compliance_Finding__c</fullName>
    <label>Non- Compliance Finding</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>