force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_Planned_changes_in_system_Procedure__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Planned_changes_in_system_Procedure__c</fullName>
    <label>Planned changes in system/procedure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>