force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_Previous_Comments__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Previous_Comments__c</fullName>
    <label>Previous Comments</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>