force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_Program_County__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_County__c</fullName>
    <formula>CLQ_Program__r.CLQ_County__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program County</label>
    <type>Text</type>
</CustomField>