force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_Program_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Email_Address__c</fullName>
    <label>Program Email Address</label>
    <type>Email</type>
</CustomField>