force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Name__c</fullName>
    <formula>CLQ_Program__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Name</label>
    <type>Text</type>
</CustomField>