force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Type__c</fullName>
    <formula>CLQ_Program__r.CLQ_Program_Record_Type__c</formula>
    <label>Program Type</label>
    <type>Text</type>
</CustomField>