force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Recommendation__c</fullName>
    <label>Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Close-Not Addressed</fullName>
            </value>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Report Revised - Not Required</fullName>
            </value>
            <value>
                <fullName>Return for Revision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>