force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_Required_Documents_Attached__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Required_Documents_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required Documents Attached</label>
    <type>Checkbox</type>
</CustomField>