force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_Responsibleperson_for_Implementation__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Responsibleperson_for_Implementation__c</fullName>
    <label>Responsible person for implementation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>