force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_Review_Requested__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Review_Requested__c</fullName>
    <label>Review Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>