force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_Reviewer_Comments__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Reviewer_Comments__c</fullName>
    <label>Reviewer Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>