force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_Short_term_Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Short_term_Action_Taken__c</fullName>
    <label>Short Term Action Taken</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>