force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_Signature_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Signature_Submission_Date__c</fullName>
    <label>Signature Submission Date</label>
    <type>DateTime</type>
</CustomField>