force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/CLQ_User_Submitting_this_CAP__c.field-meta.xml
<CustomField>
    <fullName>CLQ_User_Submitting_this_CAP__c</fullName>
    <label>User Submitting this CAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>