force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/Integration_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Document_Type__c</fullName>
    <label>Integration Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Integration_OnBase_Document_Types</valueSetName>
    </valueSet>
</CustomField>