force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/Related_Standard_Finding__c.field-meta.xml
<CustomField>
    <fullName>Related_Standard_Finding__c</fullName>
    <description>Created for Forms &amp; Reports to get Standard Finding Name</description>
    <formula>CLQ_Findings__r.CLQ_Stnd_Finding__c</formula>
    <label>Related Standard Finding</label>
    <type>Text</type>
</CustomField>