force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/fields/StdFinding_RiskLevel__c.field-meta.xml
<CustomField>
    <fullName>StdFinding_RiskLevel__c</fullName>
    <description>Created for Forms &amp; Reports to get Standard Finding Risk Level</description>
    <formula>CLQ_Findings__r.CLQ_Risk_Level__c</formula>
    <label>StdFinding RiskLevel</label>
    <type>Text</type>
</CustomField>