force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/listViews/Center_Inactive_User_CLQ_Corrective_Action_Plan.listView-meta.xml
<ListView>
    <fullName>Center_Inactive_User_CLQ_Corrective_Action_Plan</fullName>
    <filterScope>Queue</filterScope>
    <label>Center - Inactive User</label>
    <queue>Center_Inactive_User</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>