force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/listViews/FCC_Inactive_User_CLQ_Corrective_Action_Plan.listView-meta.xml
<ListView>
    <fullName>FCC_Inactive_User_CLQ_Corrective_Action_Plan</fullName>
    <filterScope>Queue</filterScope>
    <label>FCC- Inactive User</label>
    <queue>FCC_Inactive_User</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>