force-app/main/default/objects/CLQ_Corrective_Action_Plan__c/listViews/ODE_Inactive_User_CLQ_Corrective_Action_Plan.listView-meta.xml
<ListView>
    <fullName>ODE_Inactive_User_CLQ_Corrective_Action_Plan</fullName>
    <filterScope>Queue</filterScope>
    <label>ODE - Inactive User</label>
    <queue>ODE_Inactive_User</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>